tests/tooling/fixtures/native/execution/negative/sel_return_nullability_suffix_unsupported.objc3
module SELReturnNullabilitySuffixUnsupported;

fn pick(flag: bool) -> SEL? {
  if (flag) {
    return 1;
  }
  return 0;
}

fn main() -> i32 {
  if (pick(true) != 0) {
    return 1;
  }
  return 0;
}
